--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>table-scan-menu-magic</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>QR Menu Builder - Система управління меню кафе</title>
+    <meta name="description" content="Професійна система управління цифровим меню для кафе та ресторанів з QR кодами та real-time оновленнями" />
+    <meta name="author" content="Digital Menu Solutions" />
+    <meta name="keywords" content="qr menu, цифрове меню, кафе, ресторан, замовлення онлайн, меню конструктор" />
 
-    <meta property="og:title" content="table-scan-menu-magic" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:title" content="QR Menu Builder - Цифрове меню для кафе" />
+    <meta property="og:description" content="Створюйте та керуйте цифровим меню вашого кафе з QR кодами. Drag & drop редагування, завантаження фото, real-time оновлення для клієнтів." />
+    <meta property="og:site_name" content="QR Menu Builder" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="QR Menu Builder - Цифрове меню для кафе" />
+    <meta name="twitter:description" content="Професійна система управління цифровим меню для кафе та ресторанів" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   </head>
 
   <body>
